# python-project-lvl1

./: .gitignore  .travis.yml  README.md  pyproject.toml
brain_games/: brain_even_logic.py  cli.py  engine.py  game_engine.py  utils.py
brain_games/games/: __init__.py  calc.py  calc_game.py  calc_game_questions.py  even.py  even_game.py  even_game_questions.py  game_logic.py  gcd.py  gcd_game.py  gcd_game_questions.py  prime.py  prime_game.py  prime_game_questions.py  progression.py  progression_game.py  progression_game_questions.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
shafigullinik_brain_games.egg-info/: PKG-INFO  SOURCES.txt
