[tool.poetry]
name = "shafigullinik_brain_games"
version = "0.7.5"
description = "package for 1st python project"
authors = ["Ilnar <ilnar@example.com>"]
repository = "https://github.com/ShafigullinIK/python-project-lvl1"
classifiers = [
    "Development Status :: 4 - Beta"
]

packages = [ { include = "brain_games" }, ]

[tool.poetry.scripts]
  brain-games = "brain_games.scripts.brain_games:main"
  brain-even = "brain_games.scripts.brain_even:main"
  brain-calc = "brain_games.scripts.brain_calc:main"
  brain-gcd = "brain_games.scripts.brain_gcd:main"
  brain-progression = "brain_games.scripts.brain_progression:main"
  brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dependencies]
python = "^3.6.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
